<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mynta Console</string>
    <string name="signin">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="navigation">Navigations</string>
    <string name="dashboard">Dashboard</string>
    <string name="database_size">Database Size</string>
    <string name="users_were_active">Total Active Users</string>
    <string name="total_notifications">Notifications Sent</string>
    <string name="console_visits">Your Console Visits</string>
    <string name="dark_mode">Dark mode</string>
    <string name="screen_sleep">Screen Sleep mode</string>
    <string name="fullscreen_mode">Fullscreen mode</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="notification_vibration">Notification Vibration</string>
    <string name="download_via_wifi">Download Via Wi-Fi only</string>
    <string name="get_started_page">Get Started Page</string>
    <string name="force_fullscreen">Force Fullscreen</string>
    <string name="bookmarks_page">Bookmarks Page</string>
    <string name="downloads_page">Downloads Page</string>
    <string name="base_url">Base Url</string>
    <string name="email_address">Email Address</string>
    <string name="admob_app_id">AdMob App Id</string>
    <string name="admob_native_unit_id">AdMob Native Ad unit</string>
    <string name="admob_interstitial_unit_ad">AdMob Interstitial Ad unit</string>
    <string name="admob_rewarded_unit_ad">AdMob Rewarded Ad unit</string>
    <string name="send_notification">Send Notification</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_body">Notification Body</string>
    <string name="notification_target">Notification Target</string>
    <string name="notification_icon_name">Notification Icon Name</string>
    <string name="notification_image_url">Notification Image Url</string>
    <string name="send">Send</string>
    <string name="delete_navigation">Delete Navigation</string>
    <string name="navigation_title">Navigation title</string>
    <string name="navigation_link">Navigation link</string>
    <string name="open_outside_app">Open outside app</string>
    <string name="enable_premium_link">Enable premium link</string>
    <string name="add_navigation">Add Navigation</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Sign Up.</string>
    <string name="email">Email Address</string>
    <string name="edit_navigation">Edit navigation</string>
    <string name="navigation_title_required">Navigation title can\'t be empty.</string>
    <string name="navigation_link_required">Navigation link can\'t be empty.</string>
    <string name="notification_title_required">Notification title can\'t be empty.</string>
    <string name="notification_body_required">Notification body can\'t be empty.</string>
    <string name="preview">Preview</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="manage_users">Manage Users</string>
    <string name="custom_css">Custom CSS</string>
    <string name="update">Update</string>
    <string name="darkmode_option">Dark Mode Option</string>
    <string name="dark_mode_data_updated">Dark Mode Data Updated</string>
    <string name="notifications_preferences">Notification Preferences</string>
    <string name="notification_preferences_updated">Notification Preferences Updated</string>
    <string name="user_details">User Details</string>
    <string name="walkthrough">walkthrough</string>
    <string name="webview">WebView</string>
    <string name="wordpress">WordPress</string>
    <string name="youtube">YouTube</string>
    <string name="vimeo">Vimeo</string>
    <string name="facebook">Facebook</string>
    <string name="pinterest">Pinterest</string>
    <string name="imgur">Imgur</string>
    <string name="maps">Google Maps</string>
    <string name="navigation_icon">Navigation icon</string>
    <string name="update_navigation">Update Navigation</string>
    <string name="save">Save</string>
    <string name="webview_updated">WebView Data Updated Successfully</string>
    <string name="facebook_updated">Facebook Data Updated Successfully</string>
    <string name="youtube_updated">Youtube Data Updated Successfully</string>
    <string name="vimeo_updated">Vimeo Data Updated Successfully</string>
    <string name="imgur_updated">Imgur Data Updated Successfully</string>
    <string name="pinterest_updated">Pinterest Data Updated Successfully</string>
    <string name="maps_updated">Google Maps Data Updated Successfully</string>
    <string name="no_users_found">We couldn\'t find any members associated with this email!</string>
    <string name="wrong_password">The password entered is incorrect. Try again.</string>
    <string name="delete_user">Delete user</string>
    <string name="all_fields_are_required">All fields are required.</string>
    <string name="access_token">Access Token</string>
    <string name="per_page">Per Page</string>
    <string name="you_don_t_have_any_opened_tickets_click_to_add_a_new_one">No open tickets found. \nClick here to open a ticket.</string>
    <string name="policies_updated">Policies Updated Successfully</string>
    <string name="about_app_updated">About App Updated Successfully</string>
    <string name="share_content_updated">Share Content Updated Successfully</string>
    <string name="board_name">Board Name</string>
    <string name="map_style">Map Style</string>
    <string name="choose_design">Choose Design</string>
    <string name="channel_id">Channel Id</string>
    <string name="video_design">Video Design</string>
    <string name="category_design">Category Design</string>
    <string name="post_design">Post Design</string>
    <string name="category_design_one">Category Design 1</string>
    <string name="category_design_two">Category Design 2</string>
    <string name="category_design_three">Category Design 3</string>
    <string name="category_design_four">Category Design 4</string>
    <string name="wordpress_updated">WordPress Updated Successfully</string>
    <string name="walkthrough_title">Walkthrough title</string>
    <string name="walkthrough_description">Walkthrough description</string>
    <string name="walkthrough_thumbnail">Walkthrough thumbnail</string>
    <string name="add_walkthrough">Add Walkthrough</string>
    <string name="walkthrough_added">Walkthrough Added Successfully</string>
    <string name="edit_walkthrough">Edit Walkthrough</string>
    <string name="delete_walkthrough">Delete Walkthrough</string>
    <string name="update_walkthrough">Update Walkthrough</string>
    <string name="walkthrough_deleted">Walkthrough Deleted</string>
    <string name="walkthrough_edited">Walkthrough Updated</string>
    <string name="manage_ads">Manage ADs</string>
    <string name="choose_provider">Choose a default provider</string>
    <string name="about_console">About Console</string>
    <string name="package_name">Package Name</string>
    <string name="invalid_package_name">No apps with this package name found, Please add a valid application package name.</string>
    <string name="manage_account">Manage your Console Account</string>
    <string name="signin_with_qr">Sign in with QR code</string>
    <string name="camera_permission_required">Console needs access to your camera to scan the QR code.</string>
    <string name="write_external_storage_permission_required">Console needs access to your files to download project data.</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="signout">Sign out</string>
    <string name="help_centre">Help Center</string>
    <string name="change_password">Change Password</string>
    <string name="newsletter">Newsletter</string>
    <string name="mint_console_newsletter">Mint Console newsletter</string>
    <string name="picassos_newsletter">Picassos newsletter</string>
    <string name="beta_newsletter">Beta newsletter</string>
    <string name="two_factor_auth">Two Factor Authentication</string>
    <string name="tfa">2FA</string>
    <string name="account_updated_successfully">Account updated successfully</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="current_password_empty">Current password can\'t be empty.</string>
    <string name="email_empty">Email can\'t be empty.</string>
    <string name="new_confirm_password_empty">Confirm &amp; new password can\'t be empty.</string>
    <string name="submit_request">Submit a request</string>
    <string name="purchasecode">Purchase Code</string>
    <string name="next_step">Next</string>
    <string name="application_name">Application Name</string>
    <string name="claim_gift">Claim Gift</string>
    <string name="how_to_claim_your_customization_gift">How to claim your customization gift?</string>
    <string name="customization_card_usually_cost_40_but_now_you_can_get_one_for_free_by_following_these_steps">Customization card usually cost 40$, but now you can get one for free by following this steps:</string>
    <string name="claim_gift_steps">1. Write a review on your experience with Mint on Codecanyon. <a href="https://console.themintapp.com/hc/en-us/articles?ai=19876932&amp;s=63633709">How to write a review?</a>\n\n2. Upload a screenshot of the review and some essential files for the customization you need (i.e. splash screen logo) to Google Drive and copy the share link for said files.\n\n3. Fill the required fields (including the Google Drive link) and we\'ll do the rest for you! In no time, you\'ll have your customized app ready to go.</string>
    <string name="request_customization">Request Customization</string>
    <string name="drive_link">Google Drive Link</string>
    <string name="request_submitted_successfully_we_will_verify_your_data_and_send_you_the_customized_source_code_to">Your customization request has been submitted, our developers will verify your data and customize your app in less than 2 business days. The customized source code will be checked for quality when finished and will be sent to </string>
    <string name="please_read_our_terms_of_use_for_details_about_our_customization_card_system">Please read our <a href="https://console.themintapp.com/policies/terms">Terms of Use</a> for details about our Customization Card system.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_into_your_mynta_account_to_continue">Sign into your Mynta account to continue</string>
    <string name="verify_your_mynta_app">Verify your Mynta App!</string>
    <string name="enter_the_purchase_code_acquired_on_codecanyon_after_your_purchase_of_mynta_you_can_find_it_here">Enter the purchase code acquired on CodeCanyon after your purchase of Mynta. You can find it <a href="https://codecanyon.net/item/mint-full-fresh-android-webview-app/24821012/support">here.</a></string>
    <string name="please_enter_a_valid_purchase_code">* Please enter a valid purchase code</string>
    <string name="where_is_your_business_located">Where is your Business Located?</string>
    <string name="business_name">Business Name</string>
    <string name="business_email">Business Email</string>
    <string name="your_users_will_use_this_email_to_send_you_feedback">Your users will use this email to send you feedback.</string>
    <string name="tell_us_about_your_business">Tell us about your Business</string>
    <string name="give_us_information_about_your_business_or_team">Give us information about your business or team*</string>
</resources>