<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?color_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/verify_your_mynta_app"
            android:textColor="?color_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/enter_the_purchase_code_acquired_on_codecanyon_after_your_purchase_of_mynta_you_can_find_it_here"
            android:textColor="?color_dark"
            android:textColorLink="@color/color_blue"
            android:textSize="14sp" />

        <EditText
            android:id="@id/purchasecode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_rectangle_background"
            android:hint="@string/purchasecode"
            android:inputType="text"
            android:maxLines="1"
            android:gravity="center_vertical"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="?color_dark"
            android:textColorHint="?color_dark"
            android:textSize="@dimen/input_text_size"
            tools:ignore="Autofill,RtlSymmetry,SmallSp,TextFields" />

        <TextView
            android:id="@id/response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_a_valid_purchase_code"
            android:layout_marginStart="20dp"
            android:layout_gravity="start"
            android:layout_marginTop="7dp"
            android:visibility="gone"
            android:textSize="12sp"
            android:textColor="@color/color_danger"
            android:layout_marginEnd="20dp" />

        <Button
            android:id="@id/next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_primary_rounded"
            android:text="@string/next_step"
            android:textAllCaps="false"
            android:visibility="gone"
            android:textColor="?color_light_separate"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
